include/UIAnimation.h

typedef struct _UIAnimation
{
    int finished;

    const char *forKey;
    int duration;
    UIFloat (*timingFunction)(UIFloat t);

    void *startValue;
    void *endValue;
    size_t _valueSize;

    uint64_t startTime;
    uint64_t endTime;
} UIAnimation;
typedef struct _UITransaction
{
    uint64_t duration;
    UIFloat (*timingFunction)(UIFloat t);

} UITransaction;
uint64_t UIAnimationGetCurrentTime();
UIAnimation UIAnimationCopy(UIAnimation anim);
void UIAnimationDestroy(UIAnimation anim);
void UIAnimationTransactionBegin();
void UIAnimationTransactionSetDuration();
void UIAnimationTransactionEnd();
void UIAnimationTransactionFlush();
void UIAnimationCoreTick();
// MARK: Easing functions
UIFloat UIAnimationTimingFunctionLinear(UIFloat t);
UIFloat UIAnimationTimingFunctionEaseInSine(UIFloat t);