python/panosui_c.py


        unix_lib_dirs_list = []
        if bitage.startswith("64"):
            # prefer 64 bit if that is our arch
            unix_lib_dirs_list += ["/lib64", "/usr/lib64"]

        # must include standard libs, since those paths are also used by 64 bit
        # installs
        unix_lib_dirs_list += ["/lib", "/usr/lib"]
        if sys.platform.startswith("linux"):
            # Try and support multiarch work in Ubuntu
            # https://wiki.ubuntu.com/MultiarchSpec
            if bitage.startswith("32"):
                # Assume Intel/AMD x86 compat
                unix_lib_dirs_list += ["/lib/i386-linux-gnu", "/usr/lib/i386-linux-gnu"]
            elif bitage.startswith("64"):
                # Assume Intel/AMD x86 compatible
                unix_lib_dirs_list += [
                    "/lib/x86_64-linux-gnu",
                    "/usr/lib/x86_64-linux-gnu",
                ]
            else:
                # guess...
                unix_lib_dirs_list += glob.glob("/lib/*linux-gnu")
        directories.extend(unix_lib_dirs_list)

        cache = {}
        lib_re = re.compile(r"lib(.*)\.s[ol]")
        # ext_re = re.compile(r"\.s[ol]$")
        for our_dir in directories.ordered():
            try:
                for path in glob.glob("%s/*.s[ol]*" % our_dir):
                    file = os.path.basename(path)

                    # Index by filename
                    cache_i = cache.setdefault(file, set())
                    cache_i.add(path)

                    # Index by library name
                    match = lib_re.match(file)
                    if match:
                        library = match.group(1)
                        cache_i = cache.setdefault(library, set())
                        cache_i.add(path)
            except OSError:
                pass

        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    """Library loader for Microsoft Windows"""

    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        """Lookup class for Windows libraries..."""

        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for path in other_dirs:
        if not os.path.isabs(path):
            path = os.path.abspath(path)
        load_library.other_dirs.append(path)


del loaderclass

# End loader

add_library_search_dirs([])

# Begin libraries
_libs["panosui"] = load_library("panosui")

# 1 libraries
# End libraries

# No modules

UIFloat = c_float# /usr/local/include/UIGeometry.h: 5

# /usr/local/include/UIGeometry.h: 10
class struct__UIPoint(Structure):
    pass

struct__UIPoint.__slots__ = [
    'x',
    'y',
]
struct__UIPoint._fields_ = [
    ('x', UIFloat),
    ('y', UIFloat),
]

UIPoint = struct__UIPoint# /usr/local/include/UIGeometry.h: 10

# /usr/local/include/UIGeometry.h: 15
class struct__UISize(Structure):
    pass

struct__UISize.__slots__ = [
    'width',
    'height',
]
struct__UISize._fields_ = [
    ('width', UIFloat),
    ('height', UIFloat),
]

UISize = struct__UISize# /usr/local/include/UIGeometry.h: 15

# /usr/local/include/UIGeometry.h: 21
class struct__UIRect(Structure):
    pass

struct__UIRect.__slots__ = [
    'origin',
    'size',
]
struct__UIRect._fields_ = [
    ('origin', UIPoint),
    ('size', UISize),
]

UIRect = struct__UIRect# /usr/local/include/UIGeometry.h: 21

# /usr/local/include/UIGeometry.h: 24
if _libs["panosui"].has("UIRectCreate", "cdecl"):
    UIRectCreate = _libs["panosui"].get("UIRectCreate", "cdecl")
    UIRectCreate.argtypes = [UIFloat, UIFloat, UIFloat, UIFloat]
    UIRectCreate.restype = UIRect

# /usr/local/include/UIGeometry.h: 25
if _libs["panosui"].has("UIRectGetWidth", "cdecl"):
    UIRectGetWidth = _libs["panosui"].get("UIRectGetWidth", "cdecl")
    UIRectGetWidth.argtypes = [UIRect]
    UIRectGetWidth.restype = UIFloat

# /usr/local/include/UIGeometry.h: 26
if _libs["panosui"].has("UIRectGetHeight", "cdecl"):
    UIRectGetHeight = _libs["panosui"].get("UIRectGetHeight", "cdecl")
    UIRectGetHeight.argtypes = [UIRect]
    UIRectGetHeight.restype = UIFloat

# /usr/local/include/UIGeometry.h: 27
if _libs["panosui"].has("UIRectGetMinX", "cdecl"):
    UIRectGetMinX = _libs["panosui"].get("UIRectGetMinX", "cdecl")
    UIRectGetMinX.argtypes = [UIRect]
    UIRectGetMinX.restype = UIFloat

# /usr/local/include/UIGeometry.h: 28
if _libs["panosui"].has("UIRectGetMinY", "cdecl"):
    UIRectGetMinY = _libs["panosui"].get("UIRectGetMinY", "cdecl")
    UIRectGetMinY.argtypes = [UIRect]
    UIRectGetMinY.restype = UIFloat

# /usr/local/include/UIGeometry.h: 29
if _libs["panosui"].has("UIRectGetMaxX", "cdecl"):
    UIRectGetMaxX = _libs["panosui"].get("UIRectGetMaxX", "cdecl")
    UIRectGetMaxX.argtypes = [UIRect]
    UIRectGetMaxX.restype = UIFloat

# /usr/local/include/UIGeometry.h: 30
if _libs["panosui"].has("UIRectGetMaxY", "cdecl"):
    UIRectGetMaxY = _libs["panosui"].get("UIRectGetMaxY", "cdecl")
    UIRectGetMaxY.argtypes = [UIRect]
    UIRectGetMaxY.restype = UIFloat

# /usr/local/include/UIGeometry.h: 31
if _libs["panosui"].has("UIRectGetMidX", "cdecl"):
    UIRectGetMidX = _libs["panosui"].get("UIRectGetMidX", "cdecl")
    UIRectGetMidX.argtypes = [UIRect]
    UIRectGetMidX.restype = UIFloat

# /usr/local/include/UIGeometry.h: 32
if _libs["panosui"].has("UIRectGetMidY", "cdecl"):
    UIRectGetMidY = _libs["panosui"].get("UIRectGetMidY", "cdecl")
    UIRectGetMidY.argtypes = [UIRect]
    UIRectGetMidY.restype = UIFloat

# /usr/local/include/UIGeometry.h: 33
if _libs["panosui"].has("UIRectInset", "cdecl"):
    UIRectInset = _libs["panosui"].get("UIRectInset", "cdecl")
    UIRectInset.argtypes = [UIRect, UIFloat, UIFloat]
    UIRectInset.restype = UIRect

# /usr/local/include/UIGeometry.h: 34
if _libs["panosui"].has("UIRectOutset", "cdecl"):
    UIRectOutset = _libs["panosui"].get("UIRectOutset", "cdecl")
    UIRectOutset.argtypes = [UIRect, UIFloat, UIFloat]
    UIRectOutset.restype = UIRect

# /usr/local/include/UIGeometry.h: 37
if _libs["panosui"].has("UIPointCreate", "cdecl"):
    UIPointCreate = _libs["panosui"].get("UIPointCreate", "cdecl")
    UIPointCreate.argtypes = [UIFloat, UIFloat]
    UIPointCreate.restype = UIPoint

# /usr/local/include/UIGeometry.h: 38
if _libs["panosui"].has("UIPointOffset", "cdecl"):
    UIPointOffset = _libs["panosui"].get("UIPointOffset", "cdecl")
    UIPointOffset.argtypes = [UIPoint, UIFloat, UIFloat]
    UIPointOffset.restype = UIPoint

# /usr/local/include/UIGeometry.h: 39
if _libs["panosui"].has("UIPointInRect", "cdecl"):
    UIPointInRect = _libs["panosui"].get("UIPointInRect", "cdecl")
    UIPointInRect.argtypes = [UIPoint, UIRect]
    UIPointInRect.restype = c_bool

__uint64_t = c_ulong# /usr/include/bits/types.h: 45

uint64_t = __uint64_t# /usr/include/bits/stdint-uintn.h: 27

# /usr/local/include/UIAnimation.h: 20
class struct__UIAnimation(Structure):
    pass

struct__UIAnimation.__slots__ = [
    'finished',
    'forKey',
    'duration',
    'timingFunction',
    'startValue',
    'endValue',
    '_valueSize',
    'startTime',
    'endTime',
]
struct__UIAnimation._fields_ = [
    ('finished', c_int),
    ('forKey', String),
    ('duration', c_int),
    ('timingFunction', CFUNCTYPE(UNCHECKED(UIFloat), UIFloat)),
    ('startValue', POINTER(None)),
    ('endValue', POINTER(None)),
    ('_valueSize', c_size_t),
    ('startTime', uint64_t),
    ('endTime', uint64_t),
]

UIAnimation = struct__UIAnimation# /usr/local/include/UIAnimation.h: 20

# /usr/local/include/UIAnimation.h: 27
class struct__UITransaction(Structure):
    pass

struct__UITransaction.__slots__ = [
    'duration',
    'timingFunction',
]
struct__UITransaction._fields_ = [
    ('duration', uint64_t),
    ('timingFunction', CFUNCTYPE(UNCHECKED(UIFloat), UIFloat)),
]

UITransaction = struct__UITransaction# /usr/local/include/UIAnimation.h: 27

# /usr/local/include/UIAnimation.h: 29
if _libs["panosui"].has("UIAnimationGetCurrentTime", "cdecl"):
    UIAnimationGetCurrentTime = _libs["panosui"].get("UIAnimationGetCurrentTime", "cdecl")
    UIAnimationGetCurrentTime.argtypes = []
    UIAnimationGetCurrentTime.restype = uint64_t

# /usr/local/include/UIAnimation.h: 31
if _libs["panosui"].has("UIAnimationCopy", "cdecl"):
    UIAnimationCopy = _libs["panosui"].get("UIAnimationCopy", "cdecl")
    UIAnimationCopy.argtypes = [UIAnimation]
    UIAnimationCopy.restype = UIAnimation

# /usr/local/include/UIAnimation.h: 32
if _libs["panosui"].has("UIAnimationDestroy", "cdecl"):
    UIAnimationDestroy = _libs["panosui"].get("UIAnimationDestroy", "cdecl")
    UIAnimationDestroy.argtypes = [UIAnimation]
    UIAnimationDestroy.restype = None

# /usr/local/include/UIAnimation.h: 34
if _libs["panosui"].has("UIAnimationTransactionBegin", "cdecl"):
    UIAnimationTransactionBegin = _libs["panosui"].get("UIAnimationTransactionBegin", "cdecl")
    UIAnimationTransactionBegin.argtypes = []
    UIAnimationTransactionBegin.restype = None

# /usr/local/include/UIAnimation.h: 35
if _libs["panosui"].has("UIAnimationTransactionSetDuration", "cdecl"):
    UIAnimationTransactionSetDuration = _libs["panosui"].get("UIAnimationTransactionSetDuration", "cdecl")
    UIAnimationTransactionSetDuration.argtypes = [uint64_t]
    UIAnimationTransactionSetDuration.restype = None

# /usr/local/include/UIAnimation.h: 36
if _libs["panosui"].has("UIAnimationTransactionEnd", "cdecl"):
    UIAnimationTransactionEnd = _libs["panosui"].get("UIAnimationTransactionEnd", "cdecl")
    UIAnimationTransactionEnd.argtypes = []
    UIAnimationTransactionEnd.restype = None

# /usr/local/include/UIAnimation.h: 37
if _libs["panosui"].has("UIAnimationTransactionFlush", "cdecl"):
    UIAnimationTransactionFlush = _libs["panosui"].get("UIAnimationTransactionFlush", "cdecl")
    UIAnimationTransactionFlush.argtypes = []
    UIAnimationTransactionFlush.restype = None

# /usr/local/include/UIAnimation.h: 39
for _lib in _libs.values():
    if not _lib.has("UIAnimationCoreTick", "cdecl"):
        continue
    UIAnimationCoreTick = _lib.get("UIAnimationCoreTick", "cdecl")
    UIAnimationCoreTick.argtypes = []
    UIAnimationCoreTick.restype = None
    break

# /usr/local/include/UIAnimation.h: 42
if _libs["panosui"].has("UIAnimationTimingFunctionLinear", "cdecl"):
    UIAnimationTimingFunctionLinear = _libs["panosui"].get("UIAnimationTimingFunctionLinear", "cdecl")
    UIAnimationTimingFunctionLinear.argtypes = [UIFloat]
    UIAnimationTimingFunctionLinear.restype = UIFloat

# /usr/local/include/UIAnimation.h: 43
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInSine", "cdecl"):
    UIAnimationTimingFunctionEaseInSine = _libs["panosui"].get("UIAnimationTimingFunctionEaseInSine", "cdecl")
    UIAnimationTimingFunctionEaseInSine.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInSine.restype = UIFloat
